// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Widgets/Tasks All Complete 1`] = `
<div
  className="widgetstasks-all-complete-makestyles-root-1"
>
  <div
    className="widgetstasks-all-complete-muipaper-root-1 widgetstasks-all-complete-makestyles-root-2 widgetstasks-all-complete-makestyles-task-1 widgetstasks-all-complete-muipaper-elevation0-1 widgetstasks-all-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-label-1 widgetstasks-all-complete-makestyles-completedlabel-1 widgetstasks-all-complete-muitypography-body1-1"
    >
      consequatur et veritatis
    </p>
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-description-1 widgetstasks-all-complete-makestyles-completeddescription-1 widgetstasks-all-complete-muitypography-body2-1"
    >
      Ratione voluptates eveniet eos autem vel delectus.
    </p>
  </div>
  <div
    className="widgetstasks-all-complete-muipaper-root-1 widgetstasks-all-complete-makestyles-root-2 widgetstasks-all-complete-makestyles-task-1 widgetstasks-all-complete-muipaper-elevation0-1 widgetstasks-all-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-label-1 widgetstasks-all-complete-makestyles-completedlabel-1 widgetstasks-all-complete-muitypography-body1-1"
    >
      est corporis accusamus
    </p>
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-description-1 widgetstasks-all-complete-makestyles-completeddescription-1 widgetstasks-all-complete-muitypography-body2-1"
    >
      Autem suscipit molestias iste omnis.
    </p>
  </div>
  <div
    className="widgetstasks-all-complete-muipaper-root-1 widgetstasks-all-complete-makestyles-root-2 widgetstasks-all-complete-makestyles-task-1 widgetstasks-all-complete-muipaper-elevation0-1 widgetstasks-all-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-label-1 widgetstasks-all-complete-makestyles-completedlabel-1 widgetstasks-all-complete-muitypography-body1-1"
    >
      nesciunt natus mollitia
    </p>
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-description-1 widgetstasks-all-complete-makestyles-completeddescription-1 widgetstasks-all-complete-muitypography-body2-1"
    >
      Est dolor autem perspiciatis dolores aut quo.
    </p>
  </div>
  <div
    className="widgetstasks-all-complete-muipaper-root-1 widgetstasks-all-complete-makestyles-root-2 widgetstasks-all-complete-makestyles-task-1 widgetstasks-all-complete-muipaper-elevation0-1 widgetstasks-all-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-label-1 widgetstasks-all-complete-makestyles-completedlabel-1 widgetstasks-all-complete-muitypography-body1-1"
    >
      doloribus tempore cumque
    </p>
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-description-1 widgetstasks-all-complete-makestyles-completeddescription-1 widgetstasks-all-complete-muitypography-body2-1"
    >
      Et rerum quas officia consequatur ut quae voluptas.
    </p>
  </div>
  <div
    className="widgetstasks-all-complete-muipaper-root-1 widgetstasks-all-complete-makestyles-root-2 widgetstasks-all-complete-makestyles-task-1 widgetstasks-all-complete-muipaper-elevation0-1 widgetstasks-all-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-label-1 widgetstasks-all-complete-makestyles-completedlabel-1 widgetstasks-all-complete-muitypography-body1-1"
    >
      accusantium dolore eum
    </p>
    <p
      className="widgetstasks-all-complete-muitypography-root-1 widgetstasks-all-complete-makestyles-description-1 widgetstasks-all-complete-makestyles-completeddescription-1 widgetstasks-all-complete-muitypography-body2-1"
    >
      Perspiciatis non consequatur velit impedit quasi.
    </p>
  </div>
</div>
`;

exports[`Storyshots Widgets/Tasks Empty 1`] = `
<div
  className="widgetstasks-empty-makestyles-root-1"
/>
`;

exports[`Storyshots Widgets/Tasks Half Complete 1`] = `
<div
  className="widgetstasks-half-complete-makestyles-root-1"
>
  <div
    className="widgetstasks-half-complete-muipaper-root-1 widgetstasks-half-complete-makestyles-root-2 widgetstasks-half-complete-makestyles-task-1 widgetstasks-half-complete-muipaper-elevation3-1 widgetstasks-half-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-label-1 widgetstasks-half-complete-muitypography-body1-1"
    >
      nesciunt natus mollitia
    </p>
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-description-1 widgetstasks-half-complete-muitypography-body2-1"
    >
      Est dolor autem perspiciatis dolores aut quo.
    </p>
  </div>
  <div
    className="widgetstasks-half-complete-muipaper-root-1 widgetstasks-half-complete-makestyles-root-2 widgetstasks-half-complete-makestyles-task-1 widgetstasks-half-complete-muipaper-elevation3-1 widgetstasks-half-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-label-1 widgetstasks-half-complete-muitypography-body1-1"
    >
      doloribus tempore cumque
    </p>
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-description-1 widgetstasks-half-complete-muitypography-body2-1"
    >
      Et rerum quas officia consequatur ut quae voluptas.
    </p>
  </div>
  <div
    className="widgetstasks-half-complete-muipaper-root-1 widgetstasks-half-complete-makestyles-root-2 widgetstasks-half-complete-makestyles-task-1 widgetstasks-half-complete-muipaper-elevation3-1 widgetstasks-half-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-label-1 widgetstasks-half-complete-muitypography-body1-1"
    >
      accusantium dolore eum
    </p>
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-description-1 widgetstasks-half-complete-muitypography-body2-1"
    >
      Perspiciatis non consequatur velit impedit quasi.
    </p>
  </div>
  <div
    className="widgetstasks-half-complete-muipaper-root-1 widgetstasks-half-complete-makestyles-root-2 widgetstasks-half-complete-makestyles-task-1 widgetstasks-half-complete-muipaper-elevation0-1 widgetstasks-half-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-label-1 widgetstasks-half-complete-makestyles-completedlabel-1 widgetstasks-half-complete-muitypography-body1-1"
    >
      consequatur et veritatis
    </p>
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-description-1 widgetstasks-half-complete-makestyles-completeddescription-1 widgetstasks-half-complete-muitypography-body2-1"
    >
      Ratione voluptates eveniet eos autem vel delectus.
    </p>
  </div>
  <div
    className="widgetstasks-half-complete-muipaper-root-1 widgetstasks-half-complete-makestyles-root-2 widgetstasks-half-complete-makestyles-task-1 widgetstasks-half-complete-muipaper-elevation0-1 widgetstasks-half-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-label-1 widgetstasks-half-complete-makestyles-completedlabel-1 widgetstasks-half-complete-muitypography-body1-1"
    >
      est corporis accusamus
    </p>
    <p
      className="widgetstasks-half-complete-muitypography-root-1 widgetstasks-half-complete-makestyles-description-1 widgetstasks-half-complete-makestyles-completeddescription-1 widgetstasks-half-complete-muitypography-body2-1"
    >
      Autem suscipit molestias iste omnis.
    </p>
  </div>
</div>
`;

exports[`Storyshots Widgets/Tasks None Complete 1`] = `
<div
  className="widgetstasks-none-complete-makestyles-root-1"
>
  <div
    className="widgetstasks-none-complete-muipaper-root-1 widgetstasks-none-complete-makestyles-root-2 widgetstasks-none-complete-makestyles-task-1 widgetstasks-none-complete-muipaper-elevation3-1 widgetstasks-none-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-label-1 widgetstasks-none-complete-muitypography-body1-1"
    >
      consequatur et veritatis
    </p>
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-description-1 widgetstasks-none-complete-muitypography-body2-1"
    >
      Ratione voluptates eveniet eos autem vel delectus.
    </p>
  </div>
  <div
    className="widgetstasks-none-complete-muipaper-root-1 widgetstasks-none-complete-makestyles-root-2 widgetstasks-none-complete-makestyles-task-1 widgetstasks-none-complete-muipaper-elevation3-1 widgetstasks-none-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-label-1 widgetstasks-none-complete-muitypography-body1-1"
    >
      est corporis accusamus
    </p>
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-description-1 widgetstasks-none-complete-muitypography-body2-1"
    >
      Autem suscipit molestias iste omnis.
    </p>
  </div>
  <div
    className="widgetstasks-none-complete-muipaper-root-1 widgetstasks-none-complete-makestyles-root-2 widgetstasks-none-complete-makestyles-task-1 widgetstasks-none-complete-muipaper-elevation3-1 widgetstasks-none-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-label-1 widgetstasks-none-complete-muitypography-body1-1"
    >
      nesciunt natus mollitia
    </p>
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-description-1 widgetstasks-none-complete-muitypography-body2-1"
    >
      Est dolor autem perspiciatis dolores aut quo.
    </p>
  </div>
  <div
    className="widgetstasks-none-complete-muipaper-root-1 widgetstasks-none-complete-makestyles-root-2 widgetstasks-none-complete-makestyles-task-1 widgetstasks-none-complete-muipaper-elevation3-1 widgetstasks-none-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-label-1 widgetstasks-none-complete-muitypography-body1-1"
    >
      doloribus tempore cumque
    </p>
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-description-1 widgetstasks-none-complete-muitypography-body2-1"
    >
      Et rerum quas officia consequatur ut quae voluptas.
    </p>
  </div>
  <div
    className="widgetstasks-none-complete-muipaper-root-1 widgetstasks-none-complete-makestyles-root-2 widgetstasks-none-complete-makestyles-task-1 widgetstasks-none-complete-muipaper-elevation3-1 widgetstasks-none-complete-muipaper-rounded-1"
  >
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-label-1 widgetstasks-none-complete-muitypography-body1-1"
    >
      accusantium dolore eum
    </p>
    <p
      className="widgetstasks-none-complete-muitypography-root-1 widgetstasks-none-complete-makestyles-description-1 widgetstasks-none-complete-muitypography-body2-1"
    >
      Perspiciatis non consequatur velit impedit quasi.
    </p>
  </div>
</div>
`;
